--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ opt-level = 3
 
 [dependencies]
 actix-web = "4.10.2"
+bcrypt = "0.17.0"
 dotenvy = "0.15.7"
 serde = "1.0.219"
 sqlx = { version = "0.8", features = [
