--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ actix-web = "4.10.2"
 bcrypt = "0.17.0"
 dotenvy = "0.15.7"
 serde = "1.0.219"
+serde_json = "1.0.140"
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
