--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ opt-level = 3
 actix-web = "4.10.2"
 bcrypt = "0.17.0"
 dotenvy = "0.15.7"
+jsonwebtoken = "9.3.1"
 serde = "1.0.219"
 serde_json = "1.0.140"
 sqlx = { version = "0.8", features = [
