feat(Profile): Update get_own_profile to return user data and refactor database access

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mysql://root:root@localhost:3306/moneyway
+DATABASE_URL=mysql://root:root@localhost:3306/moneyway?allowPublicKeyRetrieval=true
 JWT_SECRET=test1234
