--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ opt-level = 3
 [dependencies]
 actix-web = "4.10.2"
 bcrypt = "0.17.0"
+chrono = { version = "0.4.40", features = ["serde"] }
 dotenvy = "0.15.7"
 env_logger = "0.11.7"
 jsonwebtoken = "9.3.1"
