feat(Categories, Users): Enhance data structures with trimming and default values for better input handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ sqlx = { version = "0.8", features = [
     "tls-native-tls",
     "mysql",
     "chrono",
+    "trim",
 ] }
-tokio = { version = "1.44.0", features = ["full"] }
+tokio = { version = "1.44.1", features = ["full"] }
