--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
+actix-cors = "0.7.1"
 actix-extensible-rate-limit = "0.4.0"
 actix-web = "4.10.2"
 bcrypt = "0.17.0"
